--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 :root {
-  --background-dark: #2d3548;
+  --background-dark: #5fccdc;
   --text-light: rgba(255, 255, 255, 0.6);
   --text-lighter: rgba(255, 255, 255, 0.9);
   --spacing-s: 8px;
   --spacing-m: 16px;
   --spacing-l: 24px;
   --spacing-xl: 32px;
-  --spacing-xxl: 64px;
-  --width-container: 1200px;
+  --spacing-xxl: 75px;
+  --width-container: 1400px;
 }
 
 * {
@@ -21,26 +21,29 @@ html {
   height: 100%;
   font-family: "Montserrat", sans-serif;
   font-size: 14px;
+  height: 100vh;
 }
 
 body {
-  height: 100%;
+  padding: 5rem 0rem;
+  background-image: linear-gradient(15deg, #5cf1ff 0%, #af79ff 150%);
 }
 
 .hero-section {
+  margin-top: 4rem;
   align-items: flex-start;
-  background-image: linear-gradient(15deg, #0f4667 0%, #2a6973 150%);
+  /* background-image: linear-gradient(15deg, #0f4667 0%, #2a6973 150%); */
   display: flex;
   min-height: 100%;
   justify-content: center;
-  padding: var(--spacing-xxl) var(--spacing-l);
+  padding: var(--spacing-xxl) var(--spacing-s);
 }
 
 .card-grid {
   display: grid;
   grid-template-columns: repeat(1, 1fr);
-  grid-column-gap: var(--spacing-l);
-  grid-row-gap: var(--spacing-l);
+  grid-column-gap: var(--spacing-xxl);
+  grid-row-gap: var(--spacing-1);
   max-width: var(--width-container);
   width: 100%;
 }
@@ -60,6 +63,7 @@ body {
 .card {
   list-style: none;
   position: relative;
+  height: 290px;
 }
 
 .card:before {
@@ -80,7 +84,7 @@ body {
   right: 0;
   top: 0;
   transform-origin: center;
-  trsnsform: scale(1) translateZ(0);
+  /* transform: scale(1) translateZ(0); */
   transition: filter 200ms linear, transform 200ms linear;
 }
 
@@ -117,12 +121,14 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: linear-gradient(15deg, #0f4667 0%, #2a6973 150%);
+  /* background-image: linear-gradient(15deg, #0f4667 0%, #2a6973 150%); */
+  /* height: 100vh; */
 }
 
 .hText {
   font-family: "Kaushan Script", cursive;
   /* font-family: "Kaushan Script", cursives; */
   /* font-family: "Sacramento", cursive; */
-  font-size: 6rem;
+  font-size: 8rem;
+  color: var(--text-lighter);
 }
