--- a/Notes/notes.css
+++ b/Notes/notes.css
@@ -1,26 +1,60 @@
+* {
+    box-sizing: border-box;
+  }
+
+body {
+    display: flex;
+    flex-direction: column;
+    background-image: linear-gradient(10deg, #bbc9ff 0%, #ffe0b1 100%);
+}
+
+.heading {
+    display: flex;
+    justify-content: center;
+    padding: 30px 0;
+    font-family: 'Kalam', cursive;
+    font-size: 50px;
+    color: white;
+    text-shadow: 2px 2px 20px rgba(0, 0, 0, 0.2);
+}
+
+.content {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: stretch;
+}
+
 #sidebar{
-    position: relative;
+    /* position: relative; */
     background-color: rgb(206, 202, 202);
     height:100%;
     width: 230px;
+    background-color: #bbc9ff;
 }
 
 #fnotes{
-    position: absolute;
+    /* position: absolute; */
     left: 250px;
     top: 0px;
     margin-left: 0px;
     padding-left: 0px;
     width: 1030px;
     height: 45000px;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bold;
     /* font-size: 30pt; */
     height: fit-content;
     overflow-y: scroll;
+    background-image: white;
 }
 
-body, html {height:100%;
-    overflow: hidden;
+textarea {
+    padding-top: 20px;
 }
+/* body, html {height:100%;
+    overflow: hidden;
+} */
 
 #submit-button{
     position: absolute;
@@ -30,4 +64,5 @@ body, html {height:100%;
     height: 60px;
     width: 80px;
     border-radius: 10px;
+    background-color: #ffe0b1;
 }
